# customtale

./: Cargo.toml  Justfile
crates/customtale-auth/: Cargo.toml
crates/customtale-auth/src/: fingerprint.rs  lib.rs  manager.rs  oauth.rs  session.rs  session_api.rs
crates/customtale-codec/: Cargo.toml
crates/customtale-codec/src/: array.rs  base.rs  composite.rs  lib.rs  primitives.rs
crates/customtale-protocol/: Cargo.toml
crates/customtale-protocol-tools/: Cargo.toml  gen.sh  settings.gradle.kts
crates/customtale-protocol-tools/app/: build.gradle.kts
crates/customtale-protocol-tools/app/src/main/kotlin/net/coopfury/customtale_protocol_tools/: App.kt  Importer.kt  Model.kt  Special.kt
crates/customtale-protocol-tools/app/src/main/resources/: prefix_defs.rs  prefix_tests.rs
crates/customtale-protocol-tools/src/: main.rs
crates/customtale-protocol/src/: lib.rs  tests.rs
crates/customtale-protocol/src/data/: math.rs  mod.rs  net.rs
crates/customtale-protocol/src/packets/: assets.rs  auth.rs  connection.rs  mod.rs  registry.rs  setup.rs
crates/customtale-protocol/src/serde/: array.rs  base.rs  composite.rs  macros.rs  mod.rs  primitives.rs
crates/customtale-server/: Cargo.toml
crates/customtale-server/src/: framed.rs  main.rs
crates/customtale-server/src/auth/: auth_grant.rs  auth_manager.rs  auth_token.rs  base.rs  identity.rs  mod.rs
