[package]
name = "customtale-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = "1.15.3"
base64 = "0.22.1"
futures = "0.3.31"
jiff = "0.2.18"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
miette = "7.6.0"
reqwest = { version = "0.13.1", features = ["json"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["net"] }
tracing = "0.1.44"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
warp = { version = "0.4.2", features = ["server"] }
