[package]
name = "customtale-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
customtale-codec = { workspace = true }
customtale-protocol = { workspace = true }
miette = "7.6.0"
quinn = { version = "0.11.9", features = ["runtime-smol"] }
rcgen = "0.14.6"
rustls = "0.23.36"
smol = "2.0.2"
thiserror = "2.0.17"
