[package]
name = "customtale-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
customtale-codec = { workspace = true }
customtale-protocol = { workspace = true }
miette = "7.6.0"
quinn = { version = "0.11.9", features = ["runtime-tokio"] }
rcgen = "0.14.6"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
surf = "2.3.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
