[package]
name = "customtale-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
customtale-auth = { version = "0.1.0", path = "../customtale-auth" }
customtale-protocol = { workspace = true }
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
quinn = { version = "0.11.9", features = ["runtime-tokio"] }
rcgen = "0.14.6"
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["v4"] }
zstd-safe = "7.2.4"
